# backend

./: .gitignore  API.md  Cargo.toml  LICENSE  Makefile  README.md  Rocket.toml
docker/: Dockerfile
src/: configuration.rs  database.rs  facilities.rs  images.rs  main.rs  notifications.rs  testpages.rs
src/configuration/: macros.rs
src/facilities/: attributes.rs  query.rs  questions.rs  update.rs
src/facilities/update/: comments.rs  ping_notification.rs  set_facility.rs  verify_attributes.rs  will_visit.rs
tests/: add-facility.bats  by-id.bats  by-source-id.bats  framework.bash  image-upload.bats  map-tile.bats  radius-search.bats  sigint-stops-docker-container.bats
vapid/: generate_vapid_signatures.sh
