[package]
name = "backend"
version = "0.1.0"
authors = ["Andre Schröder", "Niclas Schwarzlose"]
edition = "2018"

[features]
default = []
testpages = []

[dependencies]
chrono = "0.4" # For dealing with time
flats = "0.1" # For selectively updating nested items in MongoDB
geoutils = "0.2" # For finding geographic distances
lazy_static = "1.2" # For initializing "statics" at runtime
multipart = "0.15" # For uploading images with the multipart encoding
rocket = "0.4" # For serving requests via HTTP/HTTPS
rocket_contrib = { version = "0.4", features = ["uuid", "mongodb_pool"] } # For interfacing with MongoDB, UUIDs and other helpers with rocket
uuid = { version = "0.7", features = ["v4", "serde"] } # For generating v4 UUIDs
serde = { version = "1.0", features = ["derive"] } # For (de-)serialization support
serde_json = "1.0" # For (de-)serializing JSON
slippy_map_tilenames = "0.2" # For calculating the coordinates of map tiles
tree_magic = { version = "0.2", features = ["staticmime"] } # For determining MIME types based on content
signal-hook = "0.1" # For correct signal handling if we have pid = 1

[profile.release]
lto = true
codegen-units = 1
